--- a/Day- Ex5 - Airshift/scss/_app.scss
+++ b/Day- Ex5 - Airshift/scss/_app.scss
@@ -57,7 +57,7 @@ p {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
     background-color: #eee;
-    font-size: $subheading-size;
+    font-size: $text-size;
     font-weight: 400;
     &:focus {
       outline: 0;
@@ -66,7 +66,7 @@ p {
   .btn.btn-primary {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
-    font-size: $subheading-size;
+    font-size: $text-size;
     font-weight: 500;
   }
 }
@@ -77,6 +77,12 @@ p {
 }
 .text-size {
   font-size: $text-size;
+}
+.text-gray-dark {
+  color: $color-gray-dark-1;
+}
+.text-gray-light {
+  color: $color-gray-light-1;
 }
 // =====================================================
 // Section Navbar
